--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "nodemon": "^3.1.0"
   }
 }
